# webgames-near-nftdrop

./: README.md
web3games-drop/: Cargo.toml  README.md  build.sh
web3games-drop/src/: lib.rs
web3games-nft/: Cargo.toml  build.sh
web3games-nft-drop/: Cargo.toml
web3games-nft-drop/src/: lib.rs  nft_approval_receiver.rs
web3games-nft-factory/res/: web3games_nft.wasm
web3games-nft-factory/src/: lib.rs
web3games-nft/src/: lib.rs
web3games-test-js/: accesskey.js  depolycontract.js  lowtransaction.js  web3games_nft_drop.wasm  web3games_nft_factory.wasm
