[package]
name = "web3games_nftdrop"
version = "0.0.1"
authors = ["Near Dev <henry@web3games.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "3.1.0", git = "https://github.com/web3gamesofficial/near-sdk-rs", branch = "master", default-features = false }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
